--- a/docker/nginx/nginx.development.conf
+++ b/docker/nginx/nginx.development.conf
@@ -39,8 +39,8 @@ server {
   access_log  $RAILS_ROOT/log/nginx.ssl.access.log;
   error_log   $RAILS_ROOT/log/nginx.ssl.error.log;
 
-  ssl_certificate      /etc/ssl/cookbook.docker.crt;
-  ssl_certificate_key  /etc/ssl/cookbook.docker.key;
+  ssl_certificate      /etc/ssl/$DEVELOPMENT_HOST_NAME.crt;
+  ssl_certificate_key  /etc/ssl/$DEVELOPMENT_HOST_NAME.key;
 
   ssl_protocols        TLSv1 TLSv1.1 TLSv1.2;
   ssl_ciphers          EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
