--- a/docker/Dockerfile.nginx.development
+++ b/docker/Dockerfile.nginx.development
@@ -6,11 +6,14 @@
 #
 FROM nginx
 
+ARG DEVELOPMENT_HOST_NAME
+
 RUN apt-get update -qq && apt-get -y install apache2-utils
 
 # define where nginx will look for "public" files
 # This path should be mounted as a volume in the docker-compose file
 ENV RAILS_ROOT /var/www/app
+ENV DEVELOPMENT_HOST_NAME $DEVELOPMENT_HOST_NAME
 
 WORKDIR $RAILS_ROOT
 
@@ -20,6 +23,7 @@ RUN mkdir log
 COPY docker/nginx/nginx.development.conf /tmp/docker.nginx
 # Replace paths appropriately
 RUN envsubst '$RAILS_ROOT' < /tmp/docker.nginx > /etc/nginx/conf.d/default.conf
+RUN envsubst '$DEVELOPMENT_HOST_NAME' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 EXPOSE 443
